nv-flip-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.65.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlipImageColor3 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FlipImageFloat {
    _unused: [u8; 0],
}
extern "C" {
    pub fn flip_image_color3_new(width: u32, height: u32, data: *const u8) -> *mut FlipImageColor3;
}
extern "C" {
    pub fn flip_image_color3_get_data(image: *const FlipImageColor3, data: *mut u8);
}
extern "C" {
    pub fn flip_image_color3_free(image: *mut FlipImageColor3);
}
extern "C" {
    pub fn flip_image_color3_magma_map() -> *mut FlipImageColor3;
}
extern "C" {
    pub fn flip_image_color3_color_map(
        output: *mut FlipImageColor3,
        error_map: *mut FlipImageFloat,
        value_mapping: *mut FlipImageColor3,
    );
}
extern "C" {
    pub fn flip_image_float_new(width: u32, height: u32, data: *const f32) -> *mut FlipImageFloat;
}
extern "C" {
    pub fn flip_image_float_get_data(image: *const FlipImageFloat, data: *mut f32);
}
extern "C" {
    pub fn flip_image_float_free(image: *mut FlipImageFloat);
}
extern "C" {
    pub fn flip_image_float_flip(
        error_map: *mut FlipImageFloat,
        reference_image: *mut FlipImageColor3,
        test_image: *mut FlipImageColor3,
        pixels_per_degree: f32,
    );
}
extern "C" {
    pub fn flip_image_float_copy_float_to_color3(
        error_map: *mut FlipImageFloat,
        output: *mut FlipImageColor3,
    );
}
